<resources>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="dont_have_account_signup">Don\'t have an account? Sign Up</string>
    <string name="app_name">eUdayan</string>
</resources>